--- a/map/index.html
+++ b/map/index.html
@@ -64,18 +64,16 @@
               declined significantly in recent years, the policy continues.</p>
             <p>This map showcases 2016 data. Utilizing Python and Geopandas in a Jupyter Notebook environment, data was
               wrangled and prepared for use in this Leaflet webmap. </p>
+              <div class="col mx-2">
+                <ul class="list-unstyled">
+                  <li><a href="https://twitter.com/mapmethod">@mapmethod</a></li>
+                  <li>Created for MAP674 Fall 2019 by Ritchie Katko</li>
+                  <li><a href="https://www1.nyc.gov/site/nypd/stats/reports-analysis/stopfrisk.page">NYPD Stop Question Frisk data source</a></li>
+                </ul>
+              </div>
         </section>
       </aside>
     </section>
-    <footer class="row text-white py-3">
-      <div class="col mx-2">
-        <ul class="list-unstyled">
-          <li><a href="https://twitter.com/mapmethod">@mapmethod</a></li>
-          <li>Created for MAP674 Fall 2019 by Ritchie</li>
-          <li><a href="https://www1.nyc.gov/site/nypd/stats/reports-analysis/stopfrisk.page">NYPD Stop Question Frisk data source</a></li>
-        </ul>
-      </div>
-    </footer>
   </div>
 
 
